kubernetes/main/apps/gaming/pterodactyl/app/tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft
  annotations:
    external-dns.alpha.kubernetes.io/target: "mc.dcunha.io"
spec:
  parentRefs:
    - name: external-gateway
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: minecraft
          port: 25565
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: minecraft-rcon
  annotations:
    external-dns.alpha.kubernetes.io/target: "mc-rcon.dcunha.io"
spec:
  parentRefs:
    - name: external-gateway
      sectionName: minecraft-tcp
  rules:
    - backendRefs:
        - name: minecraft-rcon
          port: 25575
